fix cascader input text align on rtl

--- a/components/cascader/style/index.less
+++ b/components/cascader/style/index.less
@@ -24,7 +24,6 @@
     .@{picker-rtl-cls} & {
       padding-right: @input-padding-horizontal-base;
       padding-left: 24px;
-      direction: rtl;
       text-align: right;
     }
   }
